--- a/css/style.css
+++ b/css/style.css
@@ -262,4 +262,94 @@ ul {
   .banner__container {
     padding: 180px 0;
   }
+}
+.stack__container {
+  padding: 40px 0;
+}
+
+.stack__heading {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 30px;
+  color: #42446e;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.stack__subheading {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  color: #666666;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.stack__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  overflow-x: auto;
+}
+
+.stack__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.stack__img {
+  width: 100px;
+  height: auto;
+}
+
+@media (min-width: 1024px) {
+  .stack__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .stack__list {
+    overflow-x: visible;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 20px;
+    width: 100%;
+  }
+  .stack__img {
+    -o-object-fit: contain;
+       object-fit: contain;
+    height: 100%;
+  }
+  .stack__heading {
+    font-size: 35px;
+    line-height: 40px;
+    margin-bottom: 50px;
+  }
+  .stack__subheading {
+    font-size: 35px;
+    line-height: 40px;
+    margin-bottom: 100px;
+  }
 }/*# sourceMappingURL=style.css.map */
