--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -16,10 +16,16 @@
 
 @media (min-width: 768px) {
   .contact__container {
+    padding-top: 130px;
     flex-direction: row;
     gap: 30px;
   }
   .contact__logo {
     margin-right: auto;
+  }
+
+  .contact__link {
+    font-size: 18px;
+    line-height: 26px;
   }
 }
