--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -19,6 +19,7 @@
 .footer__text {
   font-family: "Poppins";
   font-size: 18px;
+  line-height: 26px;
   color: $text-color;
 }
 
@@ -54,20 +55,17 @@
     display: flex;
     gap: 15px;
   }
+
+  .footer__menu-item {
+    font-size: 18px;
+    line-height: 26px;
+  }
 }
 
 @media (min-width: 1280px) {
   .footer__container {
     flex-direction: row;
     justify-content: space-between;
+    padding: 60px 0;
   }
 }
-/* Be sure to take a lo */
-
-// background: linear-gradient(90deg, #13B0F5 -2.06%, #E70FAA 100%);
-// -webkit-background-clip: text;
-// -webkit-text-fill-color: transparent;
-// background-clip: text;
-// text-fill-color: transparent;
-
-// mix-blend-mode: normal;
