--- a/styles/_banner.scss
+++ b/styles/_banner.scss
@@ -16,7 +16,7 @@
 }
 
 .banner__gradient {
-  background: linear-gradient(90deg, #13b0f5 -2.06%, #e70faa 200%);
+  background: linear-gradient(90deg, #18abf2 0%, #7565d2 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
