--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -24,21 +24,21 @@
 }
 
 .footer__gradient-1 {
-  background: linear-gradient(90deg, #13b0f5 -2.06%, #e70faa 200%);
+  background: linear-gradient(90deg, #7267d3 0%, #9949c5 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
 
 .footer__gradient-2 {
-  background: linear-gradient(90deg, #13b0f5 -2.06%, #e70faa 100%);
+  background: linear-gradient(90deg, #b038bd 0%, #c02cb7 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
 
 .footer__gradient-3 {
-  background: linear-gradient(90deg, #13b0f5 -2.06%, #e70faa 100%);
+  background: linear-gradient(90deg, #b820a1 0%, #e50faa 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
