--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -6,13 +6,6 @@
   line-height: 20px;
 }
 
-#menu__toggle {
-  opacity: 0;
-  left: 0;
-  top: 0;
-  position: absolute;
-}
-
 .menu__btn {
   display: flex;
   align-items: center;
@@ -75,6 +68,9 @@
 .menu__item {
   color: $text-color;
   transition-duration: 0.25s;
+  &:hover {
+    @include link-hover;
+  }
 }
 
 @media (min-width: 768px) {
