--- a/styles/_stack.scss
+++ b/styles/_stack.scss
@@ -28,6 +28,9 @@
   display: flex;
   gap: 10px;
   overflow-x: auto;
+  scrollbar-color: rebeccapurple rgb(171, 171, 171);
+  scrollbar-width: thin;
+  padding: 20px 0;
 }
 
 .stack__item {
@@ -47,7 +50,7 @@
   .stack__list {
     overflow-x: visible;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
     width: 100%;
   }
@@ -85,5 +88,11 @@
     font-size: 32px;
     line-height: 26px;
     margin-bottom: 100px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .stack__list {
+    grid-template-columns: repeat(6, 1fr);
   }
 }
